--- a/_posts/2017-11-01-soldes.md
+++ b/_posts/2017-11-01-soldes.md
@@ -158,4 +158,4 @@ Not to be missed are the achievements of our Florentine sculptor Vincenzo Romane
 
 <br />
 
-Our exhibition runs until end of November 2017, now with 10% off all sales. Please contact info@galeriealpine for any further information about purchasing paintings or prints, art classes or creative workshops, exhibiting as an artist, sponsoring a new artist, donations, joining our mailing list or becoming a member of the Galerie Alpine & Atelier association for 2018. Don't hesitate to contact us by email: <a href="mailto:ingo@galeriealpine.com">info@galeriealpine.com</a>
+Our exhibition runs until end of November 2017, now with 10% off all sales. Please contact <a href="mailto:ingo@galeriealpine.com">info@galeriealpine.com</a> for any further information about purchasing paintings or prints, art classes or creative workshops, exhibiting as an artist, sponsoring a new artist, donations, joining our mailing list or becoming a member of the Galerie Alpine & Atelier association for 2018.
