correct email address

--- a/_posts/2017-11-01-soldes.md
+++ b/_posts/2017-11-01-soldes.md
@@ -84,7 +84,7 @@ Enfin, ne manquez pas les magnifiques sculptures en bronze du florentin Vincenzo
 <br />
 
 Notre exposition se déroule jusqu'à fin novembre 2017, avec maintenant 10% de réduction sur toutes les ventes. Vous êtes intéressé(e) par une peinture, gravure, sculpture ? Vous souhaitez prendre un cours de peinture ou participer à un atelier créatif ? Vous désirez soutenir un de nos artistes ou exposer vos œuvres ? Vous souhaitez être informé(e) de nos prochains évènements ou encore adhérer à notre association ?
-N’hésitez pas à nous contacter en nous envoyant un email : <a href="mailto:ingo@galeriealpine.com">info@galeriealpine.com</a>
+N’hésitez pas à nous contacter en nous envoyant un email : <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a>
 
 <hr />
 
@@ -158,4 +158,4 @@ Not to be missed are the achievements of our Florentine sculptor Vincenzo Romane
 
 <br />
 
-Our exhibition runs until end of November 2017, now with 10% off all sales. Please contact <a href="mailto:ingo@galeriealpine.com">info@galeriealpine.com</a> for any further information about purchasing paintings or prints, art classes or creative workshops, exhibiting as an artist, sponsoring a new artist, donations, joining our mailing list or becoming a member of the Galerie Alpine & Atelier association for 2018.
+Our exhibition runs until end of November 2017, now with 10% off all sales. Please contact <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a> for any further information about purchasing paintings or prints, art classes or creative workshops, exhibiting as an artist, sponsoring a new artist, donations, joining our mailing list or becoming a member of the Galerie Alpine & Atelier association for 2018.
