--- a/_posts/2017-11-01-soldes.md
+++ b/_posts/2017-11-01-soldes.md
@@ -6,7 +6,7 @@ tags:
     - dark_moods
 image_dir: /img/2017/11/
 images:
-    - 
+    - Willemijn Von Dijk - Composition No.13 - acrylic on canvas 50x40cm.jpg
 ---
 
 <!--{% include slides.html %}-->
