tweak some images

--- a/_posts/2017-11-01-soldes.md
+++ b/_posts/2017-11-01-soldes.md
@@ -6,16 +6,22 @@ tags:
     - dark_moods
 image_dir: /img/2017/11/
 images:
-    - Willemijn Von Dijk - Composition No.13 - acrylic on canvas 50x40cm.jpg
+    - Sophie Scott - Lac de Taney - oil on canvas - 100x70cm.jpg
 ---
 
 <!--{% include slides.html %}-->
 
 <br />
 
+<div class="row">
+<div class="twelve columns">
+<img class="u-max-full-width" src="/img/2017/11/Heena Sheth - Mountains in Abstract - Oil on canvas - 70x140cm.jpg" />
+</div>
+</div>
+
+<br />
+
 Nous avons le grand plaisir de partager avec vous une galerie virtuelle présentant les œuvres que nous exposons en ce moment à la galerie Alpine, à Villars-sur-Ollon. Ces œuvres sont réalisées par des artistes émergents ou confirmés, locaux et internationaux.
-
-
 
 <div class="row">
 <div class="four columns">
@@ -33,7 +39,7 @@ Chacun d’entre vous trouvera son bonheur : vous pourrez découvrir les acryliq
 Avec son style semi géométrique, l’artiste gryonnaise Sophie Scott capte les scènes locales automnales, les teintes du lac des Chavonnes et de Taney, ou encore les couchers de soleil impressionnistes de Villars. Bill O’Connor, artiste local britannique et guide de montagne, réalise des croquis et des « pochards » à l’huile in situ, souvent alla prima. 
 </div>
 <div class="seven columns">
-<img class="u-max-full-width" src="/img/2017/11/Sophie Scott - Autumn Sunset Bretaye - acrylic on canvas - 50x150cm.jpg" />
+<img class="u-max-full-width" src="/img/2017/11/Sophie Scott - Autumn Magic - oil on canvas 40 x 80cm.jpg" />
 </div>
 </div>
 
@@ -119,7 +125,7 @@ The semi-geometrical style of Gryon artist Sophie Scott captures the local autum
 <img class="u-max-full-width" src="/img/2017/11/Fara Torrance - Les Diablerets - egg tempera - 45x45cm.jpg" />
 </div>
 <div class="six columns">
-Chesière’s Cat Saunders tantalises us with decadent mountain lines of gold, silver and bronze leaf whilst Gryon artist Fara Torrance captures elegant scenes from Sion to Geneva old town in the age-old layered technique of egg tempera. Internationally acclaimed French-Bulgarian artist Sofia Mitev captures evocative night time scenes across towns and valley floors.
+Chesière’s Cat Saunders tantalises us with decadent mountain lines of gold, silver and bronze leaf whilst Gryon artist Fara Torrance captures elegant scenes from Sion to Geneva old town in the age-old layered technique of egg tempera. Internationally acclaimed French-Bulgarian artist Sofia Leconte Mitev captures evocative night time scenes across towns and valley floors.
 </div>
 </div>
 
