--- a/_posts/2017-11-01-soldes.md
+++ b/_posts/2017-11-01-soldes.md
@@ -144,7 +144,7 @@ The beautiful lino-cut prints and illustrations of New Zealand’s Gemma Wiseman
 
 <div class="row">
 <div class="six columns">
-<img class="u-max-full-width" src="/img/2017/11/Lee photo.jpg" />
+<img class="u-max-full-width" src="/img/2017/11/Emma godfrey.jpg" />
 </div>
 <div class="six columns">
 The classical photography of locally established Emma Godfrey takes us through breath-taking landscapes in moody lighting, from fields and vineyards to mountain high. Villar’s local British photographer Lee Johnson captures local views and events on vintage coloured film, and produces dramatic black and white panoramas on classy aluminium mounts. 
