update opening hours

--- a/_posts/2018-04-14-spring.md
+++ b/_posts/2018-04-14-spring.md
@@ -100,7 +100,7 @@ images:
 <div class="row">
 	<div class="twelve columns">
 		<p>
-			If you are a professional artist wishing to exhibit in the summer months, then please send a selection of your work to the committee at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a>. Do subscribe to our mailing list to be informed of any events. A monthly evening ‘Artpero’ is held where you have the opportunity to meet the artists. If you are planning a painting holiday then do get in touch beforehand - we look forward to your next visit! 
+			If you are a professional artist wishing to exhibit in the summer months, then please send a selection of your work to the committee at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a>. Do <a href="/contact/">subscribe to our mailing list</a> to be informed of any events. A monthly evening ‘Artpero’ is held where you have the opportunity to meet the artists. If you are planning a painting holiday then do get in touch beforehand - we look forward to your next visit! 
 		</p>
 	</div>
 </div>
