add more images to blog post

--- a/_posts/2018-04-14-spring.md
+++ b/_posts/2018-04-14-spring.md
@@ -25,7 +25,7 @@ images:
 
 <div class="row">
 	<div class="three columns">
-		<img class="u-max-full-width" src="/img/2018/04/christmas-rose_1_orig.jpg" />
+		<img class="u-max-full-width" src="/img/2018/04/cat.jpg" />
 	</div>
 	<div class="six columns">
 		<p>
@@ -38,7 +38,10 @@ images:
 </div>
 
 <div class="row">
-	<div class="twelve columns">
+	<div class="five columns">
+		<img class="u-max-full-width" src="/img/2018/04/sophie.jpg" />
+	</div>
+	<div class="seven columns">
 		<p>
 			<a href="/artists/sophie-scott">Sophie Scott</a> is inspired by the views, shapes and colours of the changing seasons in the alpine landscape, she has a selection of panoramic winter scenes and colourful cubist landscapes, captured in oils and acrylics. Sophie is happy to be commissioned to paint your chosen views in panoramic or triptych formats and offers art classes to children and adults in the atelier. Fara Torrance works with layers of egg-tempera and has a beautiful collection of winter-spring themed paintings of views from Villars, Gryon and Bretaye in elegant hand-made frames. 
 		</p>
